fixed dark mode errorand added script for local storage

--- a/assets/css/lightDark.css
+++ b/assets/css/lightDark.css
@@ -1,20 +1,42 @@
 .dark-mode {
-    background-color: #044e52;
-    color: #ffffff;
-  }
-  
-  .dark-mode .nav {
-    background-color: #525050;
-  }
-  
-  .dark-mode .card {
-    background-color: #5a4c28;
-    color: #ffffff;
-  }
-  
-  .dark-mode .btn {
-    background-color: #6d5e39;
-    color: #ffffff;
-  }
+  background-color: #044e52;
+  color: #ffffff;
+}
 
-  .dark
+.dark-mode .navbar {
+  background-color: #525050;
+}
+
+.dark-mode .card {
+  background-color: #5a4c28;
+  color: #ffffff;
+}
+
+.dark-mode .btn {
+  background-color: #6d5e39;
+  color: #ffffff;
+}
+
+.dark-mode .form-check-input {
+  background-color: #6d5e39;
+  color: #ffffff;
+}
+.dark-mode .btn {
+  background-color: #333333;
+  color: #ffffff;
+}
+
+.dark-mode .form-check-input {
+  background-color: #555555;
+  color: #ffffff;
+}
+
+.dark-mode .accordion-item {
+  background-color: #2a2a2a;
+  color: #ffffff;
+}
+
+.dark-mode .modal-content {
+  background-color: #1c1c1c;
+  color: #ffffff;
+}
